# cobol-reference

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docs.yml
appendices/arithmetic-precision/: index.html
appendices/best-practices/: index.html
appendices/collating-sequence/: index.html
appendices/debugging/: index.html
appendices/file-status-codes/: index.html
appendices/glossary/: index.html
appendices/migration/: index.html
appendices/references/: index.html
appendices/reserved-words/: index.html
appendices/sample-programs/: index.html
appendices/terminology/: index.html
copy-replace/copy/: index.html
copy-replace/replace/: index.html
data-division/: index.html
data-division/condition-names/: index.html
data-division/data-clauses/: index.html
data-division/fd-entry/: index.html
data-division/level-numbers/: index.html
data-division/linage/: index.html
data-division/occurs/: index.html
data-division/picture/: index.html
data-division/redefines/: index.html
data-division/renames/: index.html
data-division/report-section/: index.html
data-division/screen-section/: index.html
data-division/sd-entry/: index.html
data-division/storage-sections/: index.html
docs/: index.md  standards.md
docs/extensions/: json.md  (+7 more)
environment-division/: index.html
identification-division/: index.html
intrinsic-functions/: index.html
language/: index.html
procedure-division/: index.html
search/: search_index.json
standards/: index.html
(+188 files in other folders)
