[project]
name = "cobol-reference"
version = "0.1.0"
description = "MkDocs Material site for COBOL language reference documentation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sean McBride" }]
dependencies = [
  "mkdocs-material",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Docs-only project: no Python package modules to ship.
[tool.setuptools]
packages = []
